--- a/readme
+++ b/readme
@@ -1,1 +1,14 @@
-7:59:01
+6:15
+
+My user testing defaults were
+"name": "Stacey",
+"email": "my@email.com",
+"password": "ABC123def456"
+
+and
+
+"name": "Stephen",
+"email": "his@email.com",
+"password": "ABC123def456"
+
+25051
